# kubernetes-resource

./: .gitignore  pyproject.toml  release.sh
.github/workflows/: build.yml
cli/: main.py
cli/resource/monitoring/: grafana-service.yaml  monitoring-ingress.yaml  prometheus-config.yaml  pushgateway-deployment.yaml  pushgateway-service.yaml
resource/monitor/: monitoring-ingress.yaml  namespace.yaml  prometheus-service.yaml
resource/monitoring/: grafana-deployment.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml
