[project]
name = "kubernetes-resource"
version = "0.1.0"
description = "Unified Kubernetes deployment CLI"
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.3",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "wheel>=0.45.1",
    "setuptools>=68",
]
[project.scripts]
k8s-stack = "cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cli"]
